# stackhealth

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  package.json  pnpm-lock.yaml
apps/api/: .env.example  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial.py  002_notify_email.py  003_scan_subscribers.py  004_requested_ref.py
apps/api/stackhealth/: __init__.py  config.py  database.py  disposable_email.py  notify.py  notify_templates.py  ratelimit.py
apps/api/stackhealth/api/: deps.py  main.py
apps/api/stackhealth/api/routes/: badge.py  discover.py  health.py  repos.py  scans.py
apps/api/stackhealth/data/: __init__.py  disposable_domains.txt
apps/api/stackhealth/engines/: __init__.py  _registry.py  _tools.py  cloc.py  clone.py  community.py  complexity.py  duplication.py  github_meta.py  hygiene.py  lint.py  scorecard.py  semgrep.py  test_signal.py  trivy.py
apps/api/stackhealth/formula/: __init__.py  defaults.py  v1.py
apps/api/stackhealth/models/: __init__.py  finding.py  formula_version.py  repo.py  scan.py  subscriber.py
apps/api/stackhealth/schemas/: __init__.py  scan.py
apps/api/stackhealth/storage/: r2.py
apps/api/stackhealth/worker/: jobs.py  main.py  pipeline.py
apps/api/tests/: conftest.py  test_community_collect.py  test_disposable_email.py  test_engine_registry.py  test_engine_scores.py  test_formula.py  test_hygiene_engine.py  test_notify_template.py  test_schemas.py  test_smoke.py
(+79 files in other folders)
