[project]
name = "stackhealth"
version = "0.0.1"
description = "StackHealth API + worker"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.13.3",
    "psycopg[binary]>=3.2.3",
    "rq>=2.0.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "boto3>=1.35.0",          # R2 (S3-compatible)
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.18.0",
    "python-multipart>=0.0.17",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.4",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "types-pyyaml>=6.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stackhealth"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # FastAPI dependency injection idiom: `db: Session = Depends(get_db)`
    "UP042",  # `str, Enum` mixin is what SQLAlchemy expects; StrEnum would break col binding
    "RUF005", # tuple concatenation
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
